Archive2/9a/8f3daed2181c0c/output
main.cpp: In function 'int main()':
main.cpp:9:9: error: invalid operands of types 'const char*' and 'const char [7]' to binary 'operator+'
     p + "321321";
         ^
